# translator

./: README.md  pyproject.toml
src/pytranslator/: __main__.py  translator.py
tests/: example.txt
